# aoc22

./: .gitignore  CMakeLists.txt  Parser.h  main.cpp  parser.cpp
01/: CMakeLists.txt  carrier.cpp  carrier.h  meter.cpp  meter.h
02/: CMakeLists.txt  rps.cpp  rps.h
tests/: CMakeLists.txt
