# add_executable(GamePlayTest game_play_test.cpp)
# add_library(GamePlay ../game_play.cpp) 
# target_link_libraries(GamePlayTest GamePlay)  
# add_test(GamePlayTest GamePlayTest)
  
# add_executable(RulerTest ruler_test.cpp)
# add_library(Ruler ../ruler.cpp) 
# target_link_libraries(RulerTest Ruler)  
# add_test(RulerTest RulerTest)
